--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="author" content="CodedThemes" />
 
     <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+    <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>  
 
   </head>
   <body>
